--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -87,3 +87,18 @@
     }
   }
 }
+
+@media(max-width: 991px) {
+  .categories__section {
+    .categorise__container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+@media(max-width: 575px) {
+  .categories__section {
+    .categorise__container {
+      grid-template-columns: 1fr;
+    }
+  }
+}
