--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -1,5 +1,4 @@
 .contact__form {
-  
   .form__inputs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -8,5 +7,14 @@
   .btns {
     gap: 20px;
     margin-top: 30px;
+  }
+}
+@media(max-width: 767px) {
+  .contact__form {
+    .form__inputs {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 20px;
+    }
   }
 }
