--- a/src/components/HeroSliderControls/HeroSliderControls.scss
+++ b/src/components/HeroSliderControls/HeroSliderControls.scss
@@ -34,3 +34,33 @@
     }
   }
 }
+@media(max-width: 1199px) {
+  .bgk__control__container {
+    width: 350px;
+    .img__container {
+      height: 100px;
+    }
+  }
+}
+@media(max-width: 991px) {
+  .bgk__control__container {
+    position: absolute;
+    width: 600px;
+    max-width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+@media(max-width: 575px) {
+  .bgk__control__container {
+    position: relative;
+    left: 0;
+    top: 0;
+    transform: translate(0);
+    width: 100%;
+    max-width: 100%;
+    .img__container {
+      height: 80px;
+    }
+  }
+}
