--- a/src/components/OurProjects/OurProjects.scss
+++ b/src/components/OurProjects/OurProjects.scss
@@ -6,6 +6,9 @@
     .project__container {
       height: 600px;
       position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       &::after {
         content: '';
         position: absolute;
@@ -18,10 +21,10 @@
         transition: $transition;
       }
       button {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
         background-color: $color__gold;
         z-index: 1;
         display: flex;
@@ -53,6 +56,9 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
   }
 }
