--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,6 +10,7 @@ body {
   background-color: $bg__color;
   color: $color__white;
   min-height: 200vh;
+  overflow-x: hidden;
 }
 button,
 a:hover,
@@ -26,7 +27,7 @@ input {
   all: unset;
 }
 .section__title {
-  font-size: 160px;
+  font-size: 120px;
   line-height: 1.3em;
   font-weight: 700;
   color: #282832;
@@ -46,4 +47,25 @@ input {
   font-weight: $ft__w__m;
   color: $color__gold;
   text-align: center;
+}
+
+@media(max-width: 1199px) {
+  .section__title {
+    font-size: 80px !important;
+  }
+}
+@media(max-width: 991px) {
+  .section__title {
+    font-size: 75px !important;
+  }
+}
+@media(max-width: 767px) {
+  .section__title {
+    font-size: 80px !important;
+  }
+}
+@media(max-width: 575px) {
+  .section__title {
+    font-size: 60px !important;
+  }
 }
