--- a/src/components/Gallary/Gallary.scss
+++ b/src/components/Gallary/Gallary.scss
@@ -16,6 +16,7 @@
       width: 100%;
       height: 90vh;
       position: relative;
+      // overflow: hidden;
 
       &:nth-child(2),
       &:nth-child(4) {
@@ -73,6 +74,19 @@
       height: 100%;
       object-fit: cover;
     }
+  }
+  .cursor {
+    position: fixed;
+    transform: translate(-50%, -50%);
+    transition: 5s;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: $color__gold;
+    z-index: 100000;
+    text-align: center;
+    // top: 50%;
+    // left: 50%;
   }
   .main__button {
     margin: 40px auto 0;
