--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -41,6 +41,9 @@
           opacity: 1;
         }
       }
+      &:not(.active):hover {
+        opacity: .8;
+      }
     }
   }
   .close__btn {
