--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,13 @@
 @import './variables.scss';
 
+@font-face {
+  font-family: myFirstFont;
+  src:url("../fonts/aoox\ font.ttf");
+}
+@font-face {
+  font-family: myFirstFont1;
+  src:url("../fonts/Junge-Regular.ttf");
+}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,7 +17,6 @@
 body {
   background-color: $bg__color;
   color: $color__white;
-  min-height: 200vh;
   overflow-x: hidden;
 }
 button,
@@ -27,7 +34,7 @@ input {
   all: unset;
 }
 .section__title {
-  font-size: 120px;
+  font-size: 70px !important;
   line-height: 1.3em;
   font-weight: 700;
   color: #282832;
@@ -35,6 +42,7 @@ input {
   width: 100%;
   text-align: center;
   letter-spacing: -.03em;
+  font-family: myFirstFont;
   &::first-letter {
     color: $color__gold;
     // font-weight: 100;
@@ -51,21 +59,21 @@ input {
 
 @media(max-width: 1199px) {
   .section__title {
-    font-size: 80px !important;
+    font-size: 60px !important;
   }
 }
 @media(max-width: 991px) {
   .section__title {
-    font-size: 75px !important;
+    font-size: 55px !important;
   }
 }
 @media(max-width: 767px) {
   .section__title {
-    font-size: 80px !important;
+    font-size: 50px !important;
   }
 }
 @media(max-width: 575px) {
   .section__title {
-    font-size: 60px !important;
+    font-size: 40px !important;
   }
 }
