--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -2,7 +2,7 @@
 
 .about__section {
   padding: 60px 0;
-  background-image: url('../images/2.jpg');
+  background-image: url('../images/2.png');
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
