--- a/src/pages/SingleCategry/SingleCategry.scss
+++ b/src/pages/SingleCategry/SingleCategry.scss
@@ -1,37 +1,70 @@
 @import '../../styles/variables.scss';
 
-.single__cayegor__content {
-  display: grid;
-  gap: 80px;
-  .single__project {
-
-    h3 {
-      font-size: $ft__28;
-      font-weight: $ft__w__s;
-      color: $color__gold;
-      margin-bottom: 30px;
-    }
-    .project__images {
-      padding: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 20px;
-      background-color: #724300;
-      border-radius: 6px;
-      > div {
-        flex-basis: calc(50% - 5px);
-        flex-grow: 1;
-        height: 200px;
-        border-radius: 6px;
-        overflow: hidden;
+.category__section {
+  margin: 40px auto;
+  .section__subtitle {
+    display: none;
+  }
+  .single__cayegor__content {
+    display: grid;
+    gap: 80px;
+    .single__project {
+      h3 {
+        font-size: $ft__28;
+        font-weight: $ft__w__s;
+        color: $color__gold;
+        margin-bottom: 30px;
       }
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+      .project__images {
+        padding: 3px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 3px;
+        margin-bottom: 20px;
+        background-color: #FFF;
+        overflow: hidden;
+        div {
+          flex-basis: calc(50% - 5px);
+          flex-grow: 1;
+          height: 300px;
+          overflow: hidden;
+          position: relative;
+
+          &:hover {
+            button {
+              opacity: 1;
+              transform: translate(-50%, -50%) scale(1);
+            }
+            img {
+              transform: scale(1.05555);
+            }
+          }
+        }
+        button {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          background-color: $color__gold;
+          z-index: 1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          font-size: $ft__24;
+          opacity: 0;
+          transform: translate(-50%, -50%) scale(0);
+          transition: $transition;
+        }
+        img {
+          width: 100%;
+          height: 100%;
+          transition: .3s linear;
+          object-fit: cover;
+        }
       }
     }
   }
