--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -56,7 +56,22 @@ input {
   color: $color__gold;
   text-align: center;
 }
-
+.bgk__image {
+  // background-image: url('../components/images/dark-blue-tree.png');
+  // background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+  right: -10%;
+  width: 60%;
+  height: 60%;
+  opacity: 47%;
+  transform: rotate(337deg);
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 @media(max-width: 1199px) {
   .section__title {
     font-size: 60px !important;
