--- a/src/components/MainInput/MainInput.scss
+++ b/src/components/MainInput/MainInput.scss
@@ -5,7 +5,7 @@
   border: 1px solid #E1E1E1;
   border-radius: 10px;
   flex-direction: row-reverse;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
   height: 58px;
 
   label {
