--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -9,6 +9,27 @@
     gap: 20px;
     margin-top: 30px;
   }
+  .select__box {
+    // all: unset;
+    height: 40px;
+    outline: none;
+    border: none;
+    // background-color: transparent;
+    // color: #FFF;
+    // width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 18px;
+    border-radius: 4px;
+    border: 1px solid #E1E1E1;
+    margin-top: 40px;
+  }
+  option {
+    // display: none;
+    background-color: transparent;
+    color: #000;
+  }
 }
 @media(max-width: 767px) {
   .contact__form {
