--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -53,6 +53,24 @@
     display: none;
 
   }
+  .toggle__lang {
+    padding: 6px 10px;
+    background-color: $color__gold;
+    font-size: 15px;
+    border-radius: 4px;
+    font-weight: 500;
+    transition: $transition;
+    border: 1px solid transparent;
+    &:hover {
+      background-color: transparent;
+      border: 1px solid $color__gold;
+      color: $color__gold;
+    }
+  }
+  li {
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media(max-width: 991px) {
