--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,6 @@
 @import './variables.scss';
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @font-face {
   font-family: myFirstFont;
   src:url("../fonts/aoox\ font.ttf");
@@ -18,6 +19,10 @@ body {
   background-color: $bg__color;
   color: $color__white;
   overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+  &:lang(ar) {
+    font-family: 'Noto Kufi Arabic', sans-serif;
+  }
 }
 button,
 a:hover,
@@ -47,6 +52,9 @@ input {
     color: $color__gold;
     // font-weight: 100;
     // font-size: 180px;
+  }
+  &:lang(ar) {
+    font-family: 'Noto Kufi Arabic', sans-serif;
   }
 }
 .section__subtitle {
