--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -50,6 +50,9 @@
       background-color: $color__gold;
     }
   }
+  .google__map__location {
+    width: 100%;
+  }
 }
 
 @media(max-width: 575px) {
